update mutation table with multi select dropdown

--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -21,15 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b4bb095f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from JupyterReviewer.Reviewers.PatientReviewer import PatientReviewer\n",
     "from JupyterReviewer.ReviewData import ReviewDataAnnotation\n",
+    "from JupyterReviewer.ReviewDataApp import AppComponent\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dash import html"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -50,8 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/review.pkl...\n",
-      "Dash app running on http://0.0.0.0:8088/\n"
+      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/review1.pkl...\n"
      ]
     }
    ],
@@ -60,15 +61,14 @@
     "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/review.pkl',\n",
+    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/review1.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
     "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/test_data_for_reviewer.txt', sep='\\t')\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(test_param='testing param kwargs')\n",
-    "reviewer.run(mode='external', port=8088)"
+    "reviewer.set_review_app(test_param='testing param kwargs')"
    ]
   },
   {
@@ -76,13 +76,77 @@
    "id": "b8e5688a",
    "metadata": {},
    "source": [
-    "## Add your own components below "
+    "### Add your own components below "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "df4ef73d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reviewer.app.add_component(AppComponent('component name', layout)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "082f38f7",
+   "metadata": {},
+   "source": [
+    "### Add your own annotations below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "154bab23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reviewer.review_data.add_annotation('annot name', ReviewDataAnnotation())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "213942fd",
+   "metadata": {},
+   "source": [
+    "## Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "2a724f40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://0.0.0.0:8088/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "reviewer.run(mode='external', port=8088)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df4ef73d",
+   "id": "59eb1e0b",
    "metadata": {},
    "outputs": [],
    "source": []
