--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "83de658a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "cded4f95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/opt/anaconda3/lib/python3.8/site-packages/pkg_resources/__init__.py:123: PkgResourcesDeprecationWarning: 4.0.0-unsupported is an invalid version and will not be supported in a future release\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from JupyterReviewer.Reviewers.MatchedPurityReviewer import MatchedPurityReviewer\n",
     "\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "f7f05aa1",
    "metadata": {
     "scrolled": true
@@ -458,11 +458,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/rdata_to_tsv\n",
-      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/cnp_figs\n",
-      "Reloading cnp figs\n",
-      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/mut_figs\n",
-      "Reloading mut figs\n"
+      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data_4.pkl...\n"
      ]
     }
    ],
@@ -484,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "eafeef33-cada-4564-9542-8d6082ecb793",
    "metadata": {},
    "outputs": [],
@@ -496,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "eb1fdbbe-0859-4b9c-90b3-6fc8fbb8f942",
    "metadata": {},
    "outputs": [
@@ -866,7 +862,7 @@
        "[5 rows x 146 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
@@ -895,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e5673056-8549-46fe-93dc-e9057bc74aa2",
    "metadata": {},
    "outputs": [
@@ -920,11 +916,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>purity</th>\n",
-       "      <th>ploidy</th>\n",
        "      <th>index</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>review_data_fn</th>\n",
+       "      <th>purity</th>\n",
+       "      <th>ploidy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -934,11 +930,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [purity, ploidy, index, timestamp, review_data_fn]\n",
+       "Columns: [index, timestamp, review_data_fn, purity, ploidy]\n",
        "Index: []"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "6770c38c-a251-48cf-a4a3-6b89e6edcae9",
    "metadata": {},
    "outputs": [],
@@ -967,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "ef51b1f6-cc17-4f1d-9fbc-2c706878f4f1",
    "metadata": {},
    "outputs": [
@@ -975,10 +971,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_manual/cnp_figs\n",
-      "Reloading cnp figs\n",
-      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_manual/mut_figs\n",
-      "Reloading mut figs\n"
+      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/manual_review_session.pkl...\n"
      ]
     }
    ],
@@ -1000,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "5056dd2f-1b79-4c01-822e-f3a0e8d5a3fd",
    "metadata": {},
    "outputs": [
