--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl...\n"
+      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewers.pkl...\n"
      ]
     }
    ],
@@ -61,19 +61,19 @@
     "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl',\n",
+    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewers.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/test_data_for_reviewer.txt', sep='\\t')\n",
+    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/test_data_for_reviewer.txt', sep='\\t').set_index('participant_id')\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app()"
+    "reviewer.set_review_app(drivers_fn='drivers.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1eb1d9f9",
+   "id": "4e6091be",
    "metadata": {},
    "source": [
     "### Pass custom column color assignments into the review app with the following syntax:"
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14aed763",
+   "execution_count": 35,
+   "id": "119080a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "#     [<same for all additional columns/queries>]\n",
     "# ])\n",
     "\n",
-    "#Example (uncomment to try):\n",
+    "#Example (comment out reviewer.set_review_app() above and uncomment below to try):\n",
     "\n",
     "# reviewer.set_review_app(custom_colors=[\n",
     "#     ['Variant_Classification', 'Silent', 'Black', 'LightBlue'], \n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9d63d5",
+   "id": "936e10c1",
    "metadata": {},
    "outputs": [],
    "source": []
