refactor and update documentation

--- a/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
@@ -95,8 +95,10 @@
     "1. Create a new class that inherits `ReviewerTemplate` in the `JupyterReviewer/Reviewers/` directory\n",
     "1. Define 3 abstract methods:\n",
     "    1. gen_review_data()\n",
-    "    2. gen_review_app()\n",
-    "    3. gen_autofill()\n",
+    "    1. gen_review_data_annotations()\n",
+    "    1. gen_review_app()\n",
+    "    1. gen_review_data_annotation_app_display()\n",
+    "    1. gen_autofill()\n",
     "    \n",
     "Your file will look something like the following:\n"
    ]
@@ -125,7 +127,12 @@
     "        # Preprocessing\n",
     "\n",
     "        return  ReviewData(...)\n",
-    "    \n",
+    "        \n",
+    "    def gen_review_data_annotations(self):\n",
+    "        self.add_review_data_annotation('purity', ReviewDataAnnotation('float', validate_input=validate_purity))\n",
+    "        ...\n",
+    "        \n",
+    "        \n",
     "    def gen_review_app(self, test_param) -> ReviewDataApp:\n",
     "        app = ReviewDataApp()\n",
     "        app.add_table_from_path(...)\n",
@@ -133,6 +140,10 @@
     "        ...\n",
     "        \n",
     "        return app\n",
+    "    \n",
+    "    def gen_review_data_annotation_app_display(self):\n",
+    "        self.add_review_data_annotations_app_display('purity', 'number')\n",
+    "        ...\n",
     "    \n",
     "    def gen_autofill(self):\n",
     "        self.add_autofill(...)"
@@ -206,6 +217,41 @@
     "                          )\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "096c9335",
+   "metadata": {},
+   "source": [
+    "## gen_review_data_annotations()\n",
+    "\n",
+    "Here you define what data to collect during the review session. Use the prebuilt method `self.add_review_data_annotation()`, which will add the columns to the `ReviewData.annot` table and also store the corresponding validation parameters. These are associated with the `ReviewData` object generated from the above `gen_review_data()`.\n",
+    "\n",
+    "Paramters for `ReviewerTemplate/add_review_data_annotation()` are:\n",
+    "- name: The name of the column in `annot` table. It will also be used in the app.\n",
+    "- review_data_annotation: a `ReviewDataAnnotation` object. Its parameters are:\n",
+    "    - `annot_value_type`: one of `[\"multi\", \"float\", \"int\", \"string\"]`\n",
+    "    - `options`: list of options that are valid for this annotation\n",
+    "    - `validate_input`: A custom function to validate inputs\n",
+    "    - `default`: value to automatically fill annotations with"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "98f70a03",
+   "metadata": {},
+   "source": [
+    "class PrebuiltReviewer(ReviewerTemplate):\n",
+    "    def gen_review_data(self, ...)\n",
+    "        ...\n",
+    "        \n",
+    "    def gen_review_data_annotations(self):\n",
+    "        self.add_review_data_annotation('purity', ReviewDataAnnotation('float', validate_input=validate_purity))\n",
+    "        self.add_review_data_annotation('rating', ReviewDataAnnotation('int', options=range(10)))\n",
+    "        self.add_review_data_annotation('description', ReviewDataAnnotation('string'))\n",
+    "        self.add_review_data_annotation('class', ReviewDataAnnotation('multi', options=[f'Option {n}' for n in range(4)]))\n",
+    "        "
    ]
   },
   {
@@ -327,6 +373,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae551b9c",
+   "metadata": {},
+   "source": [
+    "## gen_review_data_annotations_app_display()\n",
+    "\n",
+    "After the user has set the review data object's annotation data and the corresponding app, the user now has to specify how to display the annotations in the input form of the app.\n",
+    "\n",
+    "The user will call `Reviewer.set_review_data_annotations_app_display()`, which by default will call `Reviewer.gen_review_data_annotations_app_display()`, which you will specify. Use the prebuilt `self.add_review_data_annotations_app_display()` method for each annotation to include. The parameters are:\n",
+    "- `name`: Corresponding name of a column that exists in the `ReviewData.annot` table (specified in `gen_review_data_annotations()`\n",
+    "-`app_display_type`: one of `['text', 'textarea', 'number', 'checklist', 'radioitem', 'select']`\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "467e9646",
+   "metadata": {},
+   "source": [
+    "class PrebuiltReviewer:\n",
+    "    ...\n",
+    "    \n",
+    "    def gen_review_data_annotations_app_display(self):\n",
+    "        self.add_review_data_annotations_app_display('purity', 'number')\n",
+    "        self.add_review_data_annotations_app_display('rating', 'number')\n",
+    "        self.add_review_data_annotations_app_display('description', 'text')\n",
+    "        self.add_review_data_annotations_app_display('class', 'radioitem')\n",
+    "        \n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ea81b40-7307-483c-b98b-75116d8ffee2",
    "metadata": {
     "tags": []
@@ -430,7 +507,7 @@
     "                        review_data_fn: str, \n",
     "                        description: str='', \n",
     "                        df: pd.DataFrame = pd.DataFrame(), \n",
-    "                        review_data_annotation_dict: {str: ReviewDataAnnotation} = {}, \n",
+    "                        review_data_annotation_list: [ReviewDataAnnotation] = [], \n",
     "                        reuse_existing_review_data_fn: str = None,\n",
     "                       ):\n",
     "        \n",
@@ -439,32 +516,38 @@
     "        return  ReviewData(review_data_fn=review_data_fn,\n",
     "                           description=description,\n",
     "                           df=df,\n",
-    "                           review_data_annotation_dict = {'purity': ReviewDataAnnotation('number', validate_input=validate_purity),\n",
-    "                                                          'rating': ReviewDataAnnotation('number', options=range(10)),\n",
-    "                                                          'description': ReviewDataAnnotation('text'),\n",
-    "                                                          'class': ReviewDataAnnotation('radioitem', options=[f'Option {n}' for n in range(4)]),\n",
-    "                                                         })\n",
+    "                          )\n",
+    "    \n",
+    "    def gen_review_data_annotations(self):\n",
+    "        self.add_review_data_annotation('purity', ReviewDataAnnotation('float', validate_input=validate_purity))\n",
+    "        self.add_review_data_annotation('rating', ReviewDataAnnotation('int', options=range(10)))\n",
+    "        self.add_review_data_annotation('description', ReviewDataAnnotation('string'))\n",
+    "        self.add_review_data_annotation('class', ReviewDataAnnotation('multi', options=[f'Option {n}' for n in range(4)]))\n",
     "    \n",
     "    def gen_review_app(self, test_param) -> ReviewDataApp:\n",
     "        app = ReviewDataApp()\n",
-    "        app.add_table_from_path(table_title='MAF file', \n",
+    "        app.add_table_from_path(table_title='DFCI MAF file', \n",
     "                                component_id='maf-component-id', \n",
-    "                                table_fn_col='mutations_file', \n",
-    "                                table_cols=['gene', 'vaf', 'cov'])\n",
+    "                                table_fn_col='DFCI_bucket_sample_dfci_maf_fn', \n",
+    "                                table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
     "\n",
     "\n",
     "        def gen_data_summary_table(df, idx, cols):\n",
     "            r = df.loc[idx]\n",
-    "            return [dbc.Table.from_dataframe(r[cols].to_frame().reset_index())]\n",
+    "            return [[html.H1(f'{r.name} Data Summary'), dbc.Table.from_dataframe(r[cols].to_frame().reset_index())]]\n",
     "\n",
-    "        app.add_component(AppComponent(name='Sample Data Summary', \n",
-    "                                      layout=html.Div(dbc.Table.from_dataframe(df=pd.DataFrame()),\n",
-    "                                               id='sample-data-summary-component'\n",
-    "                                              ), \n",
-    "                                      callback_output=[Output('sample-data-summary-component', 'children')],\n",
-    "                                      new_data_callback=gen_data_summary_table, \n",
-    "                                      ),\n",
-    "                               cols=['age', 'gender']\n",
+    "        app.add_component(AppComponent(name='sample-info-component', \n",
+    "                                              layout=html.Div(children=[html.H1('Data Summary'), \n",
+    "                                                                 dbc.Table.from_dataframe(df=pd.DataFrame())],\n",
+    "                                                       id='sample-info-component'\n",
+    "                                                      ), \n",
+    "                                              callback_output=[Output('sample-info-component', 'children')],\n",
+    "                                              new_data_callback=gen_data_summary_table, \n",
+    "                                              ),\n",
+    "                               cols=['BETA_ploidy',\n",
+    "                                     'BETA_purity',\n",
+    "                                     'BETA_purity_lower',\n",
+    "                                     'BETA_purity_upper']\n",
     "                              )\n",
     "\n",
     "        def plot_interactive_graph(df: pd.DataFrame, idx: str, slider_value, test_param):\n",
@@ -481,7 +564,7 @@
     "            return [fig, dash.no_update] # or just return the original file\n",
     "\n",
     "\n",
-    "        app.add_component(AppComponent('Interactive Graph',\n",
+    "        app.add_component(AppComponent('test-interactive-graph',\n",
     "                                      html.Div(children=[dcc.Graph(figure={}, id='a-figure'), \n",
     "                                                dcc.Slider(0, 1, 0.1, value=0.5, \n",
     "                                                           id='a-slider'\n",
@@ -498,10 +581,17 @@
     "        \n",
     "        return app\n",
     "    \n",
+    "    def gen_review_data_annotations_app_display(self):\n",
+    "        self.add_review_data_annotations_app_display('purity', 'number')\n",
+    "        self.add_review_data_annotations_app_display('rating', 'number')\n",
+    "        self.add_review_data_annotations_app_display('description', 'text')\n",
+    "        self.add_review_data_annotations_app_display('class', 'radioitem')\n",
+    "    \n",
     "    def gen_autofill(self):\n",
-    "        self.add_autofill('Interactive Graph', {'purity': State('a-slider', 'value'), \n",
-    "                                                     'class': 'Option 1'})\n",
-    "    \n"
+    "        self.add_autofill('test-interactive-graph', State('a-slider', 'value'), 'purity')\n",
+    "        self.add_autofill('test-interactive-graph', 'Option 1', 'class')\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -531,15 +621,13 @@
    "source": [
     "test_reviewer = PrebuiltReviewer()\n",
     "test_reviewer.set_review_data(review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Prebuilt_reviewer.Dev_Reviewer.pkl', \n",
-    "                              description='testing', \n",
-    "                              df = pd.read_csv(f'/Users/cchu/Desktop/Methods/JupyterReviewer/example_notebooks/example_data/Jupyter_Reviewer_Tutorial/data_to_review_example.tsv', sep='\\t'), # optional if directory above already exists. \n",
-    "                              review_data_annotation_dict = {'purity': ReviewDataAnnotation('number', validate_input=validate_purity),\n",
-    "                                                             'rating': ReviewDataAnnotation('number', options=range(10)),\n",
-    "                                                             'description': ReviewDataAnnotation('text'),\n",
-    "                                                             'class': ReviewDataAnnotation('radioitem', options=[f'Option {n}' for n in range(4)]),\n",
-    "                                                             }\n",
+    "                                description='testing', \n",
+    "                                df = cchu_purities_df, # optional if directory above already exists. \n",
     "                             )\n",
+    "test_reviewer.set_review_data_annotations()\n",
+    "test_reviewer.set_review_data_annotations_app_display()\n",
     "test_reviewer.set_review_app(test_param='testing param kwargs')\n",
+    "test_reviewer.set_autofill()\n",
     "\n",
     "# User customization\n",
     "test_reviewer.app.add_component(AppComponent('Test Add Component', html.Div(html.P('New component'))))\n",
@@ -681,7 +769,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -695,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
